@startuml Example DB Schema
entity "students" as students {
    * id: number <<PK>>
    --
    * gender_id: integer <<FK>>
    * academic_level_id: integer <<FK>>
    * country_id: integer <<FK>>
    * platform_id: integer <<FK>>
    relationship_status: ERelationshipStatus
    age: integer
    avg_daily_usage_hours: float
    affects_academic_performance: boolean
    sleep_hours_per_night: float
    mental_health_score: integer
    conflicts_over_social_media: integer
    addicted_score: integer
}

entity "genders" as genders {
    * id: number <<PK>>
    --
    gender: EGender
}

entity "academic_levels" as academic_levels {
    * id: number <<PK>>
    --
    academic_level: EAcademicLevel
}

entity "countries" as countries {
    * id: number <<PK>> 
    --
    country_name: text
}

entity "platforms" as platforms {
    * id: number <<PK>> 
    --
    platform: EPlatform
}

students "*" -- "1" academic_levels
students "*" -- "1" genders
students "*" -- "1" platform
students "*" -- "1" countries
@enduml